--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.1",
-    "firebase": "^10.7.0",
+    "firebase": "^10.7.1",
     "flowbite-react": "^0.6.4",
     "font-awesome": "^4.7.0",
     "hi": "^0.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-gauge-chart": "^0.4.1",
     "react-google-charts": "^4.0.1",
     "react-icons": "^4.11.0",
