--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.1",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
     "flowbite-react": "^0.6.4",
